Force keyframe in regular intervals using MediaRecorder's VEAEncoder

This CL makes sure that we produce a keyframe for every 100 frames when
MediaRecorder uses HW encoder.

Bug: 837450
Change-Id: Ifa1a674012085aa122a8e907ca1f88cb8a949e55
Reviewed-on: https://chromium-review.googlesource.com/1033181
Commit-Queue: Emircan Uysaler <emircan@chromium.org>
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554552}
Former-commit-id: e39cab4d53bdca08d52958d762dadde50e053532